[package]
name = "hello_kubers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ws"]
ws = ["kube/ws"]

[dependencies]
kube = { version = "0.87.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["latest"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.36"
tracing-subscriber = "0.3.3"
anyhow = "1.0.44"
futures = "0.3.17"
